# qualia-plugin-brainmix

./: README.md  pyproject.toml
conf/brainmix/: CNN_float32_train.toml  CNN_int16_evaluate.toml  CNN_int8_evaluate.toml  float32_train.toml  int16_evaluate.toml  int8_evaluate.toml  int8_train.toml
src/qualia_plugin_brainmix/: __init__.py
src/qualia_plugin_brainmix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/qualia_plugin_brainmix/dataset/: BrainMIX.py  __init__.py
src/qualia_plugin_brainmix/deployment/qualia_codegen/: RedPitaya.py  RedPitaya_App.py  RedPitaya_Metrics.py  __init__.py
src/qualia_plugin_brainmix/examples/RedPitaya/: CMakeLists.txt  build.sh
src/qualia_plugin_brainmix/examples/RedPitaya_App/: CMakeLists.txt  README.md
src/qualia_plugin_brainmix/examples/RedPitaya_App/include/: Common.hpp  SystemUtils.hpp
src/qualia_plugin_brainmix/examples/RedPitaya_App/src/: ADC.cpp  DAC.cpp  DataAcquisition.cpp  DataWriterCSV.cpp  DataWriterDAC.cpp  ModelProcessing.cpp  ModelWriterCSV.cpp  ModelWriterDAC.cpp  SystemUtils.cpp  main.cpp
src/qualia_plugin_brainmix/examples/RedPitaya_Metrics/: CMakeLists.txt  build.sh  main.cpp  main_metrics.cpp
